crates/parser/src/tests/snapshots/kclvm_parser__tests__file__if_1.snap
---
source: parser/src/tests/file.rs
expression: "crate::tests::parsing_file_string(\"testdata/if-01.k\")"
---
{
  "filename": "if-01.k",
  "doc": null,
  "body": [
    {
      "node": {
        "type": "Assign",
        "targets": [
          {
            "node": {
              "name": {
                "node": "a",
                "filename": "if-01.k",
                "line": 1,
                "column": 0,
                "end_line": 1,
                "end_column": 1
              },
              "paths": [],
              "pkgpath": ""
            },
            "filename": "if-01.k",
            "line": 1,
            "column": 0,
            "end_line": 1,
            "end_column": 1
          }
        ],
        "value": {
          "node": {
            "type": "NumberLit",
            "binary_suffix": null,
            "value": {
              "type": "Int",
              "value": 1
            }
          },
          "filename": "if-01.k",
          "line": 1,
          "column": 4,
          "end_line": 1,
          "end_column": 5
        },
        "ty": null
      },
      "filename": "if-01.k",
      "line": 1,
      "column": 0,
      "end_line": 1,
      "end_column": 5
    },
    {
      "node": {
        "type": "If",
        "body": [
          {
            "node": {
              "type": "Assign",
              "targets": [
                {
                  "node": {
                    "name": {
                      "node": "bbb",
                      "filename": "if-01.k",
                      "line": 4,
                      "column": 4,
                      "end_line": 4,
                      "end_column": 7
                    },
                    "paths": [],
                    "pkgpath": ""
                  },
                  "filename": "if-01.k",
                  "line": 4,
                  "column": 4,
                  "end_line": 4,
                  "end_column": 7
                }
              ],
              "value": {
                "node": {
                  "type": "NumberLit",
                  "binary_suffix": null,
                  "value": {
                    "type": "Int",
                    "value": 2
                  }
                },
                "filename": "if-01.k",
                "line": 4,
                "column": 10,
                "end_line": 4,
                "end_column": 11
              },
              "ty": null
            },
            "filename": "if-01.k",
            "line": 4,
            "column": 4,
            "end_line": 4,
            "end_column": 11
          }
        ],
        "cond": {
          "node": {
            "type": "Identifier",
            "names": [
              {
                "node": "a",
                "filename": "if-01.k",
                "line": 3,
                "column": 3,
                "end_line": 3,
                "end_column": 4
              }
            ],
            "pkgpath": "",
            "ctx": "Load"
          },
          "filename": "if-01.k",
          "line": 3,
          "column": 3,
          "end_line": 3,
          "end_column": 4
        },
        "orelse": []
      },
      "filename": "if-01.k",
      "line": 3,
      "column": 0,
      "end_line": 4,
      "end_column": 12
    }
  ],
  "comments": []
}
